fix letter spacing on h4 h3

--- a/assets/css/4-pages/_contact.sass
+++ b/assets/css/4-pages/_contact.sass
@@ -15,7 +15,7 @@
   h4
     color: $moewhite
     //font-family: 'Passion One', cursive
-    letter-spacing: 0.05em
+    //letter-spacing: 0.05em
     text-align: center
     
 
@@ -35,7 +35,7 @@
   h4
     color: $moewhite
     //font-family: 'Passion One', cursive
-    letter-spacing: 0.05em
+    //letter-spacing: 0.05em
     
   ul
     padding-bottom: 20px
@@ -89,5 +89,5 @@
 h3
   color: $moewhite
   //font-family: 'Passion One', cursive
-  letter-spacing: 0.05em
+  //letter-spacing: 0.05em
   text-align: center
