--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -724,7 +724,6 @@ header {
         margin: 0 0; } }
   #contact h4 {
     color: #ecf0f1;
-    letter-spacing: 0.05em;
     text-align: center; }
 
 .contact-logo {
@@ -738,8 +737,7 @@ header {
   margin: 0 auto;
   padding-bottom: 30px; }
   .contact-conatiner h4 {
-    color: #ecf0f1;
-    letter-spacing: 0.05em; }
+    color: #ecf0f1; }
   .contact-conatiner ul {
     padding-bottom: 20px; }
   .contact-conatiner li {
@@ -773,7 +771,6 @@ header {
 
 h3 {
   color: #ecf0f1;
-  letter-spacing: 0.05em;
   text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
